# crmPex

./: .env  pyproject.toml  setup.py
data/: output.csv  output.xlsx  query.sql  tmp.json
main/: main.py
